--- a/chrome/browser/resources/local_ntp/most_visited_single.css
+++ b/chrome/browser/resources/local_ntp/most_visited_single.css
@@ -493,17 +493,28 @@ body.dark-theme .md-tile:active .md-menu::after {
   height: var(--md-title-height);
   line-height: var(--md-title-height);
   text-align: center;
-  width: 100%;
+  width: 96px;
   word-break: break-word;
   word-wrap: break-word;
 }
 
+/* Apply when a custom background is set */
 body.dark-theme .md-title {
   color: rgb(248, 249, 250);
+  text-shadow: 0 0 16px rgba(0, 0, 0, 0.3);
 }
 
-body.background-image .md-title {
-  text-shadow: 0 0 16px rgba(0, 0, 0, 0.3);
+/* Apply only when a theme is installed */
+body.using-theme .md-title-container {
+  background-color: white;
+  border-radius: 12px;
+  height: 24px;
+  padding: 4px;
+}
+
+body.using-theme .md-title {
+  color: rgba(33, 32, 36, 0.86);
+  text-shadow: unset;
 }
 
 .md-menu {
